# tetris

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  board.c  board.h  build.zig  build.zig.zon  main.c  pallet_texture.c  pallet_texture.h  score.c  score.h  tetris_base.bmp.h  tetris_filled_base.bmp.h  tetromino.c  tetromino.h  texture_store.c  texture_store.h
.github/workflows/: release.yml
